# oedisi-frontend-app

./: .gitignore  .prettierrc  COMPONENTS.md  MIGRATION.md  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml  smoke-templates.yml  vitest.yml
data/: .gitkeep
data/templates/: 1776803433921.json  1776965713642.json  nlpdopf_ieee123.json  nlpdsse_ieee123.json  nrel_dsse.json  ornl_dopf_pso_ieee123.json  ornl_ev_pso_ieee123.json  pnnl_dopf_admm.json  pnnl_dopf_admm_demo.json  pnnl_dopf_lindistflow.json  pnnl_dopf_lindistflow_demo.json
deploy/: nginx.conf  oedisi-backend.service
docs/: OEDISI Frontend Run Book.md
notebooks/: admm_report.ipynb  ev_report.ipynb  od_report.ipynb  swod_report.ipynb
scripts/: importComponent.ts  print_type_hierarchy.py  smoke-templates.mjs
server/: .gitignore  README.md  components.json  database.js  index.js  install_components.py  main.py  output_annotations.py  pyproject.toml
server/postprocess/: README.md  __init__.py  admm.py  common.py  ev.py  od.py  report.py  swod.py
src/: App.vue  main.ts
src/components/: CustomEdge.vue  CustomNode.vue  DataVisualization.vue  GraphicWalkerEmbed.vue  LeftSidebar.vue  LogPanel.vue  RightSidebar.vue  StatusBadge.vue
src/lib/: api.ts  catalog.json  componentCatalog.ts  flowTypes.ts  portCompatibility.ts  typeHierarchy.json  wiringDiagram.test.ts  wiringDiagram.ts
src/pages/: FlowchartDesigner.vue  HomePage.vue  NotebookView.vue  RunsDetail.vue  RunsList.vue  (+3 more)
(+64 files in other folders)
