[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "oedisi>=3.0.1",
    "psutil>=7.2.2",
    "pyarrow>=24.0.0",
    "uvicorn>=0.44.0",
    "boto3>=1.34.0",
    "matplotlib>=3.8.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
    "OpenDSSDirect.py[extras]==0.7.0",
    "pandas>=2.2.0",
    "python-multipart>=0.0.9",
    "scipy>=1.12.0",
    "xarray>=2024.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
